# swagger.json
@@ -2075,9 +2075,20 @@
           "Administration (Parking)"
         ],
         "summary": "Lister toutes les places de parking",
+        "description": "Retourne la liste des places de parking. Peut être filtrée par id_parking.",
         "security": [
           {
             "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id_parking",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Filtrer par parking"
           }
         ],
         "responses": {
